# notam-classification

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitgnore  CHANGELOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  mlflow.db  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: cd.yml  ci.yml
app/poc/: predictor.py  streamlit_app.py
config/: config.yaml  model_config.yaml
data/: build_splits.py  download_dataset.py
data/processed/: EDA_REPORT.txt  feature_pipeline.pkl  notam_dev.db  notams_clean.csv  train_test_splits.pkl
data/processed/models/: best_model.pkl  model_metadata.json
data/raw/: notams.csv
docker/api/: Dockerfile
docker/mlflow/: Dockerfile
docker/postgres/: init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: CategoryBadge.jsx  ConfidenceBar.jsx  Navbar.jsx
frontend/src/pages/: BatchPage.jsx  ClassifyPage.jsx  HistoryPage.jsx  MonitoringPage.jsx  StatusPage.jsx
frontend/src/services/: api.js
notebooks/: 01_EDA.ipynb  02_Feature_Engineering.ipynb  03_Modeling.ipynb
notebooks/data/processed/models/: LinearSVC_Calibrated.pkl  (+2 more)
reports/drift/: drift_report_20260308_214134.html  drift_report_20260308_214148.html  drift_report_20260308_221323.html  drift_report_20260308_221425.html  drift_report_20260308_222547.html  test_suite_20260308_214136.html  test_suite_20260308_214149.html  test_suite_20260308_221324.html  test_suite_20260308_221425.html  test_suite_20260308_222547.html
scripts/: docker_utils.py  run_experiment.py  run_monitoring.py  start_api.py  train.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routers/: classify.py  health.py  monitoring.py
src/data/: data_loader.py
src/features/: feature_engineering.py
src/models/: evaluate.py  train.py
src/monitoring/: drift_detector.py  monitoring_dashboard.py
src/pipeline/: inference_pipeline.py  training_pipeline.py
src/tracking/: database.py  mlflow_tracker.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_data_loader.py  test_feature_engineering.py  test_inference_pipeline.py
(+6 files in other folders)
