[project]
name = "notam-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "altair>=5.3.0",
    "fastapi>=0.135.1",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "nbformat>=5.10.4",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=6.6.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.41.0",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.5",
]
